style and more features

--- a/CAN_reader/templates/home.html
+++ b/CAN_reader/templates/home.html
@@ -1,3 +1,7 @@
+{%  extends 'main.html' %}
+
+{% block content %}
+
 <div class="row">
     <div class="col">
         <div class="card card-body">
@@ -41,3 +45,5 @@
         </div>
     </div>
 </div>
+
+{% endblock %}
