--- a/file/templates/upload_file.html
+++ b/file/templates/upload_file.html
@@ -1,5 +1,12 @@
+{%  extends 'main.html' %}
+
+{% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    <div class="mb-3">
+        {{ form.as_p }}
+    </div>
+
     <button type="submit">Upload</button>
 </form>
+{% endblock %}
